kubernetes/apps/database/barman-cloud/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/networking.k8s.io/networkpolicy_v1.json
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: barman-cloud
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: barman-cloud
      app.kubernetes.io/name: plugin-barman-cloud
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector: {}
          podSelector:
            matchExpressions:
              - key: cnpg.io/cluster
                operator: Exists
      ports:
        - port: 9090
          protocol: TCP
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: cloudnative-pg
              app.kubernetes.io/name: cloudnative-pg
      ports:
        - port: 9090
          protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: barman-cloud-api
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: barman-cloud
      app.kubernetes.io/name: plugin-barman-cloud
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
